--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   --clr-neutral-700: #D0D0D0;
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
+  --clr-dark-400: #707070;
   --clr-shadow: #26272920;
   --ff-primary: "Inter", sans-serif;
   --fw-small: 300;
@@ -26,7 +27,7 @@
   --fs-200: clamp(16px, 1.125rem, 18px);
   --fs-100: 1rem;
   --fs-50: 0.875rem;
-  --fs-25: 12px;
+  --fs-25: 0.75rem;
   --inline-padding: clamp(20px, 5vw, 130px);
 }
 
@@ -125,6 +126,10 @@
 
 .clr-dark {
   color: var(--clr-dark-700);
+}
+
+.fs-25 {
+  font-size: var(--fs-25);
 }
 
 .fs-200 {
@@ -294,7 +299,9 @@ svg {
   z-index: -1;
 }
 
-.header-middle, .header-bottom-wrapper, .header-top {
+.header-middle,
+.header-bottom-wrapper,
+.header-top {
   margin: 0 auto;
   max-width: 1560px;
 }
@@ -352,7 +359,8 @@ header {
   font-weight: var(--fw-small);
   gap: 1.25rem;
 }
-.header-top .actual-header-top, .header-top .small-nav {
+.header-top .actual-header-top,
+.header-top .small-nav {
   gap: 0.625rem;
   width: 100%;
   display: flex;
@@ -702,10 +710,12 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
 .link.primary2::after {
   background-color: var(--clr-primary-700);
 }
-.link svg, .link img {
+.link svg,
+.link img {
   transition: 0.2s ease;
 }
-.link:hover svg, .link:hover img {
+.link:hover svg,
+.link:hover img {
   transform: rotate(45deg);
 }
 
@@ -875,6 +885,9 @@ footer .contact.flex.start img {
   }
 }
 @media screen and (max-width: 690px) {
+  main.responsive {
+    margin-top: 70px;
+  }
   header-component {
     height: 55px;
     overflow: hidden;
@@ -903,10 +916,12 @@ footer .contact.flex.start img {
   .header-top .small-nav {
     display: flex;
   }
-  footer .logo, .logo-image {
+  footer .logo,
+.logo-image {
     display: none;
   }
-  .header-top .actual-header-top, .header-bottom {
+  .header-top .actual-header-top,
+.header-bottom {
     flex-direction: column;
     align-items: flex-start;
   }
@@ -915,7 +930,8 @@ footer .contact.flex.start img {
     border-bottom: 1px solid var(--clr-neutral-700);
     gap: 1.25rem;
   }
-  .header-bottom span, .header-bottom .just-link {
+  .header-bottom span,
+.header-bottom .just-link {
     font-size: var(--fs-100);
   }
 }
