--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -16,6 +16,7 @@
 
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
+  --clr-dark-400: #707070;
   --clr-shadow: #26272920;
 
   // Primary font styles
@@ -28,17 +29,17 @@
   --fw-semi-medium: 500;
   --fw-medium: 600;
   --fw-bold: 700;
- 
+
   --fs-700: 3.25rem; // 52 px
   --fs-600: 3rem; // 48px
   --fs-550: 2.5rem; // 40px
   --fs-500: clamp(16px, 2rem, 32px); // 32px
   --fs-400: clamp(16px, 1.875rem, 30px);
   --fs-300: clamp(16px, 1.25rem, 20px); // 20px
-  --fs-200: clamp(16px, 1.125rem, 18px); // 20px
+  --fs-200: clamp(16px, 1.125rem, 18px); // 18px
   --fs-100: 1rem; // 16px
   --fs-50: 0.875rem; // 14px
-  --fs-25: 12px;
+  --fs-25: 0.75rem; // 12px
 
   --inline-padding: clamp(20px, 5vw, 130px);
 }
@@ -135,6 +136,10 @@
 
 .clr-dark {
   color: var(--clr-dark-700);
+}
+
+.fs-25 {
+  font-size: var(--fs-25);
 }
 
 .fs-200 {
