--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+
 //Reseting
 // Box sizing rules
 *,
@@ -46,6 +47,7 @@ body {
   line-height: 1.5;
   background: var(--clr-neutral-1000);
   font-size: var(--fs-100);
+
   &.non-scrollable {
     height: 100vh;
     overflow-y: hidden;
@@ -97,12 +99,15 @@ svg {
 
 .breadcrumb {
   font-size: var(--fs-50);
+
   a {
-    position: relative; 
+    position: relative;
     color: var(--dark-500);
+
     &::after {
       content: "\00a0/";
     }
+
     &::before {
       content: "";
       width: calc(100% - 8px);
@@ -114,11 +119,13 @@ svg {
       opacity: 0;
       transition: 0.2s ease;
     }
+
     &:hover::before {
       bottom: 0;
       opacity: 1;
     }
   }
+
   span {
     font-weight: var(--fw-medium);
   }
@@ -127,21 +134,24 @@ svg {
 .dark-bg {
   position: relative;
   isolation: isolate;
+
   &::after {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      top: 0;
-      background: #000;
-      opacity: 0.4;
-      z-index: -1;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #000;
+    opacity: 0.4;
+    z-index: -1;
   }
 }
 
 
-.header-middle, .header-bottom-wrapper, .header-top {
+.header-middle,
+.header-bottom-wrapper,
+.header-top {
   margin: 0 auto;
   max-width: 1560px;
 }
@@ -156,6 +166,7 @@ svg {
   position: relative;
   --color: var(--clr-neutral-1000);
   color: var(--color);
+
   &::after {
     content: "";
     position: absolute;
@@ -167,6 +178,7 @@ svg {
     transform: scaleX(0);
     transition: 0.2s ease;
   }
+
   &:hover::after {
     transform: scaleX(1);
   }
@@ -194,16 +206,21 @@ header {
   color: var(--clr-neutral-1000);
   font-weight: var(--fw-small);
   gap: 1.25rem;
-  .actual-header-top, .small-nav {
+
+  .actual-header-top,
+  .small-nav {
     gap: 0.625rem;
     width: 100%;
     @include flex(space-between, center);
   }
+
   .small-nav {
     display: none;
+
     img {
       width: 3.125rem;
     }
+
     .hamburger-wrapper {
       @include flex();
       background: none;
@@ -213,13 +230,16 @@ header {
       margin: 0;
       cursor: pointer;
       height: 30px;
+
       .hamburger {
         position: relative;
         width: 20px;
         height: 2px;
         background-color: var(--clr-neutral-1000);
         transition: 0.2s ease;
-        &::after, &::before {
+
+        &::after,
+        &::before {
           content: "";
           width: 100%;
           height: 100%;
@@ -228,20 +248,24 @@ header {
           left: 0;
           transition: 0.2s ease;
         }
+
         &::after {
           bottom: -7px;
         }
+
         &::before {
           top: -7px;
         }
       }
     }
   }
+
   a {
     position: relative;
     color: var(--clr-neutral-1000);
     font-weight: var(--fw-semi-medium);
     transition: 0.2s ease;
+
     &:hover {
       color: var(--clr-accent-700);
     }
@@ -251,12 +275,15 @@ header {
 header-component.open {
   height: 150vh;
   overflow-y: scroll;
+
   .header-top .small-nav .hamburger-wrapper .hamburger {
     background-color: transparent;
+
     &::after {
       bottom: 0;
       transform: rotate(45deg);
     }
+
     &::before {
       top: 0;
       transform: rotate(-45deg);
@@ -275,17 +302,21 @@ header-component.open {
   padding: 20px var(--inline-padding);
   font-weight: var(--fw-normal);
   gap: 0.625rem;
+
   &-info {
     a:not(.inline) {
       display: block;
       margin: 5px 0 0 20px;
     }
+
     a {
       --color: var(--clr-dark-700);
     }
+
     img {
       display: inline-block;
     }
+
     &.contact3 {
       @include flex(center, center);
       gap: 5px;
@@ -295,11 +326,13 @@ header-component.open {
 
 .selectable {
   position: relative;
+
   svg {
     display: inline-block;
     margin: 0 0 2px 0;
     transition: 0.2s ease;
   }
+
   .options-holder {
     --size: -10px;
     position: absolute;
@@ -313,9 +346,11 @@ header-component.open {
     background-color: var(--clr-neutral-1000);
     z-index: 1;
   }
+
   .options {
     padding: 5px 10px;
     position: relative;
+
     &::after {
       content: "";
       display: block;
@@ -335,10 +370,12 @@ header-component.open {
 .selectable.open {
   svg {
     transform: rotate(180deg);
+
     path {
       fill: var(--clr-primary-900);
     }
   }
+
   .options-holder {
     opacity: 1;
     visibility: visible;
@@ -353,14 +390,18 @@ header-component.open {
   transition: 0.2s ease;
   font-weight: var(--fw-normal);
   cursor: pointer;
+
   &:hover {
     font-weight: var(--fw-medium);
   }
 }
+
 .selected {
   cursor: pointer;
+
   .language-option {
     color: var(--clr-primary-900);
+
     &:hover {
       font-weight: var(--fw-normal);
     }
@@ -369,6 +410,7 @@ header-component.open {
 
 .search {
   position: relative;
+
   input {
     padding: 10px 40px 10px 20px;
     border: none;
@@ -377,6 +419,7 @@ header-component.open {
     border-radius: 5px;
     width: 13.375rem;
   }
+
   button {
     display: block;
     cursor: pointer;
@@ -387,8 +430,10 @@ header-component.open {
     border: 0;
     background: none;
     transition: 0.2s ease;
+
     &:hover {
       transform: translate(0, -50%) rotate(90deg);
+
       path {
         fill: var(--clr-primary-900);
       }
@@ -407,39 +452,51 @@ header-component.open {
   padding: 20px 0;
   @include flex(space-between, center);
   border-top: 1px solid var(--clr-neutral-700);
+
   .selectable {
-    &:hover, &.open {
+
+    &:hover,
+    &.open {
       .selected {
         color: var(--clr-primary-900);
       }
+
       path {
         fill: var(--clr-primary-900);
       }
     }
+
     .options-holder {
       --size: -10px;
       border-radius: 10px;
       padding: 20px 0;
     }
+
     .options::after {
       top: -70px;
       left: 20px;
       border: 20px solid transparent;
       border-bottom: 20px solid var(--clr-neutral-1000);
     }
+
     .selected {
       font-weight: var(--fw-medium);
     }
+
     cursor: pointer;
+
     span {
       text-transform: uppercase;
     }
+
     svg {
       display: inline-block;
     }
+
     .forStudent {
       max-width: 310px;
     }
+
     .header-bottom-option {
       display: inline-block;
       min-width: 19.5rem;
@@ -449,16 +506,19 @@ header-component.open {
       font-weight: var(--fw-normal);
       font-size: var(--fs-100);
       cursor: pointer;
+
       &:hover {
         color: var(--clr-primary-900);
       }
     }
   }
-  a.just-link{
+
+  a.just-link {
     text-transform: uppercase;
     transition: 0.2s ease;
     font-weight: var(--fw-medium);
     cursor: pointer;
+
     &:hover {
       color: var(--clr-primary-900);
     }
@@ -478,11 +538,14 @@ header-component.open {
   font-size: var(--fs-100);
   transition: 0.2s ease;
   cursor: pointer;
+
   svg {
     transition: 0.2s ease;
   }
+
   &:hover {
     box-shadow: 0 10px 20px var(--clr-accent-shadow);
+
     svg {
       transform: rotate(45deg);
     }
@@ -494,6 +557,7 @@ header-component.open {
   gap: 10px;
   cursor: pointer;
   position: relative;
+
   &::after {
     content: "";
     height: 1px;
@@ -505,27 +569,37 @@ header-component.open {
     opacity: 0;
     transition: 0.2s ease;
   }
+
   &:hover::after {
     opacity: 1;
     bottom: 0;
   }
+
   &.primary {
     color: var(--clr-primary-900);
+
     &::after {
       background-color: var(--clr-primary-900);
     }
   }
+
   &.primary2 {
     color: var(--clr-primary-700);
+
     &::after {
       background-color: var(--clr-primary-700);
     }
   }
-  svg, img {
+
+  svg,
+  img {
     transition: 0.2s ease;
   }
+
   &:hover {
-    svg, img {
+
+    svg,
+    img {
       transform: rotate(45deg);
     }
   }
@@ -545,19 +619,23 @@ footer {
   font-size: var(--fs-50);
   padding-top: 3.75rem;
   padding-bottom: 3.75rem;
+
   .logo {
     flex: 1;
     min-height: 100px;
   }
+
   .logo img {
     width: clamp(100px, 100%, 180px);
   }
+
   .footer-contacts {
     width: 100%;
     gap: 2rem;
     position: relative;
     padding-bottom: 1.875rem;
     margin-bottom: 1.875rem;
+
     &::after {
       content: "";
       width: 200%;
@@ -568,25 +646,31 @@ footer {
       left: 0;
     }
   }
+
   .info-wrapper {
     flex: 5;
     width: 100%;
     max-width: 1200px;
   }
+
   .contact {
     a:not(.inline) {
       display: block;
       margin: 5px 0 0 20px;
     }
+
     a {
       --color: var(--clr-neutral-1000);
       color: var(--clr-neutral-1000);
     }
+
     img {
       display: inline-block;
     }
+
     &.flex.start {
       gap: 3px;
+
       img {
         margin-top: 3px;
       }
@@ -597,23 +681,28 @@ footer {
 .footer-nav {
   width: 100%;
   gap: 2rem;
+
   .footer-title {
     color: var(--clr-accent-700);
     font-weight: var(--fw-semi-medium);
     font-size: var(--fs-100);
     margin-bottom: 0.625rem;
   }
+
   ul {
     padding: 0;
     margin: 0;
+
     li {
       list-style: none;
       margin-bottom: 0.625rem;
     }
+
     a {
       position: relative;
       color: var(--clr-neutral-1000);
       list-style: none;
+
       &::after {
         content: "";
         width: 100%;
@@ -625,11 +714,13 @@ footer {
         transform: scaleX(0);
         transition: 0.2s ease;
       }
+
       &:hover::after {
         transform: scaleX(1);
       }
     }
   }
+
   .nav-lists {
     gap: 4rem;
   }
@@ -639,14 +730,18 @@ footer {
   text-align: end;
   margin-left: auto;
   margin-top: 3.125rem;
+
   .flex {
     margin-top: 0.625rem;
     gap: 0.625rem;
+
     img {
       width: 22px;
     }
+
     a {
       transition: 0.2s ease;
+
       &:hover {
         transform: scale(1.2);
       }
@@ -679,6 +774,7 @@ footer {
   background: var(--clr-dark-700);
   border-radius: 5px;
   transition: 0.2s ease;
+
   &:hover {
     border-radius: 50%;
   }
@@ -687,7 +783,7 @@ footer {
 @media screen and (max-width: 877px) {
   footer {
     padding-bottom: calc(3.875rem + 70px);
-  }  
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -697,6 +793,10 @@ footer {
 }
 
 @media screen and (max-width: 690px) {
+  main.responsive {
+    margin-top: 70px;
+  }
+
   header-component {
     height: 55px;
     overflow: hidden;
@@ -704,52 +804,64 @@ footer {
     top: 0;
     left: 0;
     z-index: 2;
+
     .header-top-wrapper {
       transition: 0.2s ease;
       transition-delay: 0.5s ease;
       background-color: #385bada3;
       backdrop-filter: blur(20px);
     }
-    
+
     &.open {
       background: var(--clr-neutral-1000);
+
       .header-top-wrapper {
         background-color: var(--clr-primary-900);
       }
     }
   }
+
   .selectable .student-options {
     padding-right: 30px !important;
     flex-direction: column;
   }
+
   .header-top .small-nav {
     display: flex;
   }
-  footer .logo, .logo-image {
+
+  footer .logo,
+  .logo-image {
     display: none;
   }
-  .header-top .actual-header-top, .header-bottom {
+
+  .header-top .actual-header-top,
+  .header-bottom {
     flex-direction: column;
     align-items: flex-start;
   }
+
   .header-bottom {
     border-top: none;
     border-bottom: 1px solid var(--clr-neutral-700);
     gap: 1.25rem;
-    span, .just-link {
+
+    span,
+    .just-link {
       font-size: var(--fs-100);
     }
   }
 }
 
 @media screen and (max-width: 430px) {
-  .search{
+  .search {
     margin-bottom: 10px;
     width: 100%;
+
     input {
       width: 100%;
     }
-  } 
+  }
 }
 
 @media screen and (min-width: 690px) {
@@ -757,64 +869,82 @@ footer {
     position: absolute;
     background-color: transparent;
     color: var(--clr-neutral-1000);
+
     .header-middle {
       a {
         --color: var(--clr-neutral-1000);
       }
     }
+
     .header-bottom {
       .header-bottom-option {
         color: var(--clr-dark-700);
       }
+
       a {
         color: var(--clr-neutral-1000);
+
         &:hover {
           color: var(--clr-accent-700);
         }
       }
+
       .selectable {
         color: var(--clr-neutral-1000);
+
         svg path {
           fill: var(--clr-neutral-1000);
         }
-        &:hover, &.open {
+
+        &:hover,
+        &.open {
           .selected {
             color: var(--clr-accent-700);
           }
+
           path {
             fill: var(--clr-accent-700);
           }
         }
       }
     }
+
     .selected {
       path {
         fill: var(--clr-neutral-1000);
       }
+
       .language-option {
         color: var(--clr-neutral-1000);
       }
-    } 
+    }
+
     .selectable {
       color: var(--clr-dark-700);
     }
+
     .selectable.open {
       path {
         fill: var(--clr-neutral-1000);
       }
     }
+
     .search {
       background-color: transparent;
+
       path {
         fill: var(--clr-neutral-1000);
       }
+
       input {
         color: var(--clr-neutral-1000);
         background-color: transparent;
+
         &::placeholder {
           color: var(--clr-neutral-1000);
         }
       }
+
       button:hover {
         path {
           fill: var(--clr-accent-700);
