--- a/scss/management.scss
+++ b/scss/management.scss
@@ -250,12 +250,89 @@ main {
 }
 
 .smi2 {
+  margin-bottom: 4rem;
   .swiper-button-prev {
     left: 5.125rem;
   }
 
   .swiper-button-next {
     right: 5.125rem;
+  }
+}
+
+.yandexMap {
+  margin: 3.75rem 0;
+  iframe {
+    border: none;
+    outline: none;
+    border-radius: 10px;
+  } 
+}
+
+.contacts-wrapper.flex {
+  gap: 2rem;
+}
+
+.contact-info {
+  gap: 20px;
+  align-items: stretch !important;
+  margin-bottom: 8rem;
+  .contact {
+    min-width: 300px;
+    padding-left: 3.4375rem;
+    position: relative;
+    &::before {
+      content: "";
+      width: 3.125rem;
+      height: 1px;
+      position: absolute;
+      left: 0;
+      top: 8px;
+      background: var(--clr-primary-900);
+    }
+      span {
+        color: var(--clr-primary-900);
+        font-size: var(--fw-200);
+        font-weight: var(--fw-medium);
+      }
+      a:not(.inline) {
+        display: block;
+        margin: 5px 0 0 20px;
+      }
+  
+      a {
+        --color: var(--clr-dark-700);
+        width: fit-content;
+      }
+  
+      img {
+        display: inline-block;
+      }
+  
+      &.flex.start {
+        gap: 3px;
+  
+        img {
+          margin-top: 3px;
+        }
+      }
+  }
+}
+
+.social-media-block {
+  @include flex(center, center, nowrap, column);
+  padding: 3.5rem;
+  background-color: var(--clr-neutral-1000);
+  box-shadow: 0 2px 10px var(--clr-shadow);
+  border-radius: 10px;
+  span {
+    margin-bottom: 1.5rem;
+  }
+  img {
+    transition: 0.2s ease;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -271,6 +348,10 @@ main {
 
   .smi2 {
     margin-top: 0;
+  }
+
+  .contact-info.flex {
+    flex-wrap: wrap;
   }
 }
 
@@ -335,6 +416,43 @@ main {
   }
 }
 
+.file-card-wrapper {
+  width: 100%;
+  gap: 1rem;
+  margin: 3.175rem auto;
+  align-items: stretch !important;
+}
+
+.file-card {
+  position: relative;
+  color: var(--clr-neutral-1000);
+  width: 30%;
+  min-width: 280px;
+  background-color: var(--clr-primary-900);
+  padding: 1.875rem 1.5625rem 1.2rem 1.5625rem;
+  border-radius: 10px;
+  margin-bottom: auto;
+  img {
+    width: 23px;
+  }
+  &-title {
+    font-size: var(--fw-100);
+    display: inline-block;
+    font-weight: var(--fw-semi-meidum);
+    padding-bottom: 30px;
+    &::after {
+      content: "";
+      width: 80%;
+      height: 1px;
+      background-color: var(--clr-neutral-1000);
+      position: absolute;
+      top: 60%;
+      left: 0;
+      transform: translateY(-50%);
+    }
+  }
+}
+
 @media screen and (max-width: 453px) {
   .column453 {
     flex-direction: column !important;
@@ -343,6 +461,12 @@ main {
 
     .phone {
       margin-bottom: 0;
+    }
+  }
+  .social-media-block {
+    padding: 1.5rem;
+    img {
+      width: 35px;
     }
   }
 }
