--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,21 @@ svg {
   z-index: -1;
 }
 
+.block-title {
+  font-size: var(--fs-500);
+  color: var(--clr-primary-900);
+  position: relative;
+}
+.block-title::after {
+  content: "";
+  width: 100vw;
+  height: 1px;
+  background-color: var(--clr-primary-900);
+  position: absolute;
+  bottom: 0;
+  right: -15%;
+}
+
 .header-middle,
 .header-bottom-wrapper,
 .header-top {
