--- a/scss/management.scss
+++ b/scss/management.scss
@@ -4,6 +4,123 @@ main {
   padding-top: 2rem;
 }
 
+.history {
+  margin: 3.75rem 0 8rem 0;
+  .block-title {
+    margin-bottom: 4rem;
+  }
+  p {
+    margin-bottom: 1rem;
+  }
+}
+
+.structure {
+  .block-title {
+    margin-bottom: 4rem;
+  }
+  img {
+    max-width: 100%;
+  }
+}
+
+.block-links {
+  @include flex(flex-start, stretch);
+  gap: 1.25rem;
+  margin-bottom: 4rem;
+  img {
+    width: 100%;
+    height: 100%;
+    min-height: 15.3125rem;
+    object-fit: cover;
+    border-radius: 10px;
+    min-width: 14.375rem;
+  }
+  .flex.column {
+    width: 100%;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 1.25rem;
+    overflow: hidden;
+    border-radius: 10px
+  }
+  .row {
+    @include flex(space-between, flex-start);
+  }
+  .first-row {
+    width: 100%;
+    align-items: stretch;
+    gap: 1.125rem;
+  }
+  a {
+    position: relative;
+    border: 2px solid transparent;
+    border-radius: 13px;
+    transition: 0.2s ease;
+    &:hover {
+      border-color: var(- -clr-dark-700);
+    }
+    .text {
+      align-items: flex-start;
+      position: absolute;
+      bottom: 1.25rem;
+      left: 1.25rem;
+      color: var(--clr-neutral-1000);
+      font-size: var(--fs-200);
+      font-weight: var(--fw-medium);
+      &.black {
+        span {
+          color: var(--clr-dark-700);
+        }
+      }
+      img {
+        margin: 5px;
+        min-width: 0;
+        min-height: 0; 
+        width: 20px;
+        height: 20px;
+        overflow: hidden;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .block-links {
+    justify-content: center;
+    flex-wrap: wrap;
+    .flex.column {
+      width: auto;
+    }
+    img {
+      min-height: 0;
+      min-width: 0;
+    }
+    .flex.column.last {
+      align-items: center;
+    }
+  }
+}
+
+.first {
+  min-width: 17.5rem;
+}
+
+@media screen and (max-width: 500px) {
+  .first {
+    min-width: 13rem;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .first {
+    min-width: 10rem;
+  }
+}
+
+.fifth {
+  margin-right: 1.25rem;
+}
+
 .switcher {
   @include flex();
   width: 100%;
@@ -98,6 +215,9 @@ main {
     span {
       font-weight: var(--fw-medium);
     }
+    a {
+      width: fit-content;
+    }
   }
 }
 
@@ -190,6 +310,7 @@ main {
 
 .rating-blocks {
   @include flex(center, stretch, wrap);
+  margin-bottom: 4rem;
 }
 
 .rating-block {
@@ -346,12 +467,83 @@ main {
 }
 
 .club-wrapper {
-  background-color: var(--clr-neutral-700);
+  background-color: #F8F8F8           ;
   padding: 6.875rem 0;
   .block-title {
+    font-weight: var(--fw-medium);
+    text-transform: uppercase;                 
     color: var(--clr-dark-700);
     &::after {
       background-color: var(--clr-dark-700);
+    }
+  }
+}
+
+.club {
+  .primary2 {
+    color: var(--clr-primary-700);
+  }
+  .main-part {
+    margin-top: 5.75rem;
+    img.mainImage {
+      width: clamp(280px, 40%, 480px);
+    }
+  }
+  .link-to-files {
+    gap: 20px;
+    a {
+      padding: 10px 0;
+      padding-left: 1.5rem;
+      min-width: 280px;
+      gap: 3rem;
+      position: relative;
+      isolation: isolate;
+      margin-bottom: 2rem; 
+      .arrow {
+        transition: 0.2s ease;
+      }
+      &::before {
+        content: "";
+        width: 100vw;
+        border-radius: 5px;
+        height: 100%;
+        background-color: var(--clr-neutral-900);
+        position: absolute;
+        top: -1px;
+        left: 0;
+        z-index: -1;
+        opacity: 0;
+        transition: 0.2s ease;
+      }
+      &::after {
+        content: "";
+        width: 100vw;
+        height: 1px;
+        background-color: var(--clr-dark-700);
+        position: absolute;
+        bottom: 0;
+        left: 0;
+      }
+      &:hover{
+        &::before {
+          opacity: 1;
+        }
+        .arrow {
+          transform: rotate(45deg);
+        }
+      }
+    }
+    div {
+      @include flex();
+      img {
+        margin-right: 5px;
+        max-height: 20px;
+      } 
+      span {
+        text-transform: uppercase;
+        font-size: var(--fs-200);
+        margin-left: 5px;
+      }
     }
   }
 }
@@ -376,7 +568,17 @@ main {
 }
 
 @media screen and (max-width: 677px) {
-
+  .club {
+    .main-part {
+      justify-content: center;
+    }
+    .link-to-files {
+      margin-top: 4rem;
+      a::after, a::before {
+        width: calc(100% + 1.5rem);
+      }
+    }
+  }
   .card,
   .feedback-card {
     box-shadow: none;
@@ -452,6 +654,48 @@ main {
   padding: 1.875rem 1.5625rem 1.2rem 1.5625rem;
   border-radius: 10px;
   margin-bottom: auto;
+  &.white {
+    transition: 0.2s ease;
+    background-color: var(--clr-neutral-1000);
+    box-shadow: 0 2px 10px var(--clr-shadow);
+    color: var(--clr-dark-700);
+    img {
+      transition: 0.2s ease;
+      filter: brightness(50%);
+    }
+    .file-card-title::after {
+      transition: 0.2s ease;
+      background-color: var(--clr-dark-700);
+    }
+    .link {
+      transition: 0.2s ease;
+      color: var(--clr-primary-900);
+      path {
+        transition: 0.2s ease;
+        fill: var(--clr-primary-900);
+      }
+    }
+    &:hover {
+      color: var(--clr-neutral-1000);
+      box-shadow: none;
+      background-color: var(--clr-primary-900);
+      img {
+        filter: brightness(100%);
+      }
+      .file-card-title::after {
+        background-color: var(--clr-neutral-1000);
+      }
+      .link {
+        color: var(--clr-accent-700);
+        svg {
+          transform: rotate(45deg);
+        }
+        path {
+          fill: var(--clr-accent-700);
+        }
+      }
+    }
+  }
 
   img {
     width: 23px;
@@ -469,7 +713,7 @@ main {
       height: 1px;
       background-color: var(--clr-neutral-1000);
       position: absolute;
-      top: 60%;
+      bottom: 60px;
       left: 0;
       transform: translateY(-50%);
     }
